--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "start": "node listen.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chai-arrays": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.14",
     "pg": "^8.5.1"
   },
